post process volumes lecture

--- a/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -225,6 +225,32 @@ bAllowIncompatibleSkeletonSelection=False
 bUseTreeViewForAnimationCurves=False
 AnimationCurveGroupingDelimiters="._/|\\"
 
+[LandscapeEdit]
+PaintToolStrength=0.300000012
+PaintBrushRadius=2048
+PaintBrushFalloff=0.5
+TargetLayerAssetFilePath=
+bUseTargetLayerAssetFilePath=False
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200
+bUseFlattenTarget=False
+FlattenTarget=0
+bShowFlattenTargetPreview=True
+TerraceSmooth=9.99999975e-05
+TerraceInterval=1
+RampWidth=2000
+RampSideFalloff=0.400000006
+bCombinedLayersOperation=True
+bApplyWithoutMovingSculpt=True
+bApplyWithoutMovingPaint=False
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
+
 [DetailCustomWidgetExpansion]
 SkeletonEditingTool=SkeletonEditingProperties.Details.Transform
 MeshTopologySelectionMechanicProperties=SkeletonEditingProperties.Details.Transform
@@ -247,7 +273,7 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveRight.IA_MoveRight,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Turn.IA_Turn,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Run.IA_Run,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Jump.IA_Jump,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Emote.IA_Emote
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.BlendSamples_Samples
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
-BP_Player_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,BP_Player_C.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform
+BP_Player_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,BP_Player_C.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Local ExposureAdvanced,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Path Tracing.Path Tracing|Lighting Components
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,BP_Player_C.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform
 K2Node_EnhancedInputAction=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
@@ -402,12 +428,14 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.AxisMappings
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings
 WmfMediaSettings=InputSettings.Bindings.AxisMappings
 SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,BP_Player_C.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform
-CapsuleComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
-StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+CapsuleComponent=PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Local ExposureAdvanced,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Path Tracing.Path Tracing|Lighting Components,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,BP_Player_C.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform
+StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Local ExposureAdvanced,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Path Tracing.Path Tracing|Lighting Components
 DynamicMeshActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 AnimStateNode=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 SpringArmComponent=SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,BP_Player_C.TransformCommon.Transform
 K2Node_CustomEvent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,BP_Player_C.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform
+PostProcessVolume=PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Local ExposureAdvanced,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Path Tracing.Path Tracing|Lighting Components,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,BP_Player_C.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform
+BrushComponent=
 
 [/Script/ClothPainter.ClothPainterSettings]
 ViewMin=0.000000
@@ -420,8 +448,9 @@ Opacity=1.000000
 LastLevel=/Game/BaseMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
@@ -434,7 +463,6 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=Cloth Editor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=AnimationEditor
@@ -450,6 +478,7 @@ RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=
+OpenAssetsAtExit=/Game/Materials/M_FirstMaterial.M_FirstMaterial
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -477,7 +506,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize2=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonCharacter/Input
+ContentBrowserTab1.SelectedPaths=/Game/Materials
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -493,6 +522,7 @@ ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.ZoomScale=0
 ContentBrowserTab1.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserTab1.ColumnViewColumnsManuallyChangedOnce=False
+ContentBrowserTab1.JumpMRU=/All/Game/Materials
 ContentBrowserTab1.JumpMRU=/All/Game/ThirdPersonCharacter/Input
 ContentBrowserTab1.JumpMRU=/All/Game/ThirdPersonCharacter/Blueprints
 ContentBrowserTab1.JumpMRU=/All/Game/ThirdPersonCharacter/Animation
@@ -505,7 +535,6 @@ ContentBrowserTab1.JumpMRU=/All/Game/Cloth/Outfit_WhiteDress
 ContentBrowserTab1.JumpMRU=/All/Game/Cloth
 ContentBrowserTab1.JumpMRU=/All/Game
 ContentBrowserTab1.JumpMRU=/All
-ContentBrowserTab1.JumpMRU=/All/Game/Materials
 AssetDialog.ThumbnailSizeGrid=3
 AssetDialog.ThumbnailSizeList=3
 AssetDialog.ThumbnailSizeCustom=3
@@ -2013,6 +2042,39 @@ K2Node_CustomEvent.Inputs=True
 K2Node_CallFunction.Graph=True
 K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Global Illumination=True
+PostProcessVolume.Reflections=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.Film Grain=True
+PostProcessVolume.Path Tracing=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.HLOD=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.Networking=True
+PostProcessVolume.Actor=True
+MaterialExpressionSceneTexture.UMaterialExpressionSceneTexture=True
+MaterialExpressionSceneTexture.MaterialExpression=True
+BrushComponent.TransformCommon=True
+BrushComponent.HLOD=True
+BrushComponent.Collision=True
+BrushComponent.Tags=True
+BrushComponent.Cooking=True
+BrushComponent.Navigation=True
+PostProcessVolume.WorldPartition=True
+PostProcessVolume.LevelInstance=True
+PostProcessVolume.Cooking=True
+PostProcessVolume.DataLayers=True
+MaterialExpressionLogarithm10.MaterialExpression=True
+MaterialExpressionDDX.MaterialExpression=True
+MaterialExpressionDDY.MaterialExpression=True
+MaterialExpressionAbs.MaterialExpression=True
+MaterialExpressionComment.MaterialExpressionComment=True
+MaterialExpressionComment.MaterialExpression=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2029,6 +2091,8 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/BaseMap.BaseMap", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))),("/Game/MapMap.MapMap", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/MPPV_Lines.MPPV_Lines;
+RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_19
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Cloth/Outfit_WhiteDress/SKM_B_Skrt.SKM_B_Skrt;
 RecentlyPlaced=/Game/Materials/M_FirstMaterial.M_FirstMaterial;
@@ -2041,39 +2105,40 @@ RecentlyPlaced=/Script/CinematicCamera.CameraRig_Crane;
 InstalledPlugins=GeneSplicer
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPersonCharacter/Input/IA_Look
-MRUItem1=/Game/ThirdPersonCharacter/Input/IA_Turn
-MRUItem2=/Game/ThirdPersonCharacter/Blueprints/BP_Player
-MRUItem3=/Game/ThirdPersonCharacter/Animation/BS1D_IdleRun
-MRUItem4=/Game/Animations/AM_HipHopDance
-MRUItem5=/Game/ThirdPersonCharacter/Blueprints/ABP_xBot
-MRUItem6=/Game/Animations/AM_Climb
-MRUItem7=/Game/ThirdPersonCharacter/Input/IM_ThirdPerson
-MRUItem8=/Game/_GENERATED/lizag/Stairs_B8F0454C
-MRUItem9=/Game/_GENERATED/lizag/Stairs_E4BB2DEB
-MRUItem10=/Game/Characters/xBot_Skeleton
-MRUItem11=/Game/Cloth/CA_FirstOutfit
-MRUItem12=/Game/Materials/M_FirstMaterial
-MRUItem13=/Game/Animations/Emote_HipHopDance
-MRUItem14=/Game/ThirdPersonCharacter/Input/IA_Emote
-MRUItem15=/Game/Animations/Backwards_Jog
-MRUItem16=/Game/ThirdPersonCharacter/Animation/BS1D_Jump
-MRUItem17=/Game/ThirdPersonCharacter/Input/IA_Jump
-MRUItem18=/Game/Animations/Walking
-MRUItem19=/Game/ThirdPersonCharacter/Input/IA_Run
-MRUItem20=/Game/Characters/xBot
-MRUItem21=/Game/Animations/Jogging
-MRUItem22=/Game/ThirdPersonCharacter/Input/IA_MoveRight
-MRUItem23=/Game/ThirdPersonCharacter/Input/IA_MoveForward
-MRUItem24=/Game/Characters/SK_GirlBody
-MRUItem25=/Game/Characters/SKM_GirlBody
-MRUItem26=/Game/Characters/SM_GirlBody
-MRUItem27=/Game/BaseMap
+MRUItem0=/Game/Materials/MPPV_Lines
+MRUItem1=/Game/Materials/M_FirstMaterial
+MRUItem2=/Game/ThirdPersonCharacter/Input/IA_Look
+MRUItem3=/Game/ThirdPersonCharacter/Input/IA_Turn
+MRUItem4=/Game/ThirdPersonCharacter/Blueprints/BP_Player
+MRUItem5=/Game/ThirdPersonCharacter/Animation/BS1D_IdleRun
+MRUItem6=/Game/Animations/AM_HipHopDance
+MRUItem7=/Game/ThirdPersonCharacter/Blueprints/ABP_xBot
+MRUItem8=/Game/Animations/AM_Climb
+MRUItem9=/Game/ThirdPersonCharacter/Input/IM_ThirdPerson
+MRUItem10=/Game/_GENERATED/lizag/Stairs_B8F0454C
+MRUItem11=/Game/_GENERATED/lizag/Stairs_E4BB2DEB
+MRUItem12=/Game/Characters/xBot_Skeleton
+MRUItem13=/Game/Cloth/CA_FirstOutfit
+MRUItem14=/Game/Animations/Emote_HipHopDance
+MRUItem15=/Game/ThirdPersonCharacter/Input/IA_Emote
+MRUItem16=/Game/Animations/Backwards_Jog
+MRUItem17=/Game/ThirdPersonCharacter/Animation/BS1D_Jump
+MRUItem18=/Game/ThirdPersonCharacter/Input/IA_Jump
+MRUItem19=/Game/Animations/Walking
+MRUItem20=/Game/ThirdPersonCharacter/Input/IA_Run
+MRUItem21=/Game/Characters/xBot
+MRUItem22=/Game/Animations/Jogging
+MRUItem23=/Game/ThirdPersonCharacter/Input/IA_MoveRight
+MRUItem24=/Game/ThirdPersonCharacter/Input/IA_MoveForward
+MRUItem25=/Game/Characters/SK_GirlBody
+MRUItem26=/Game/Characters/SKM_GirlBody
+MRUItem27=/Game/Characters/SM_GirlBody
+MRUItem28=/Game/BaseMap
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.Action.Modifiers\" "
-Object="\"Object.Action.Modifiers\" "
+Object=
 MassSettings="\"Object.Mass\" "
 DeveloperSettings=
 SkeletalMesh="\"Object.LevelOfDetail.LODInfo.LODInfo[0].BonesToRemove.BonesToRemove[1]\" "
@@ -2118,6 +2183,9 @@ AnimGraphNode_Base=
 K2Node=
 EdGraphNode=
 InputAction="\"Object.Action.Modifiers\" "
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [/Script/ControlRigEditor.ControlRigEditModeSettings]
 bDisplayHierarchy=False
